--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,52 @@
+@import url(global/global.css);
+@import "utilidades/tipografia.css";
+@import "utilidades/cores.css";
+@import "./utilidades/animacao.css";
+
+@import "global/header.css";
+@import "global/footer.css";
+
+/* Utilidades */
+@import "utilidades/componentes.css";
+@import "utilidades/formulario.css";
+
+/* Home */
+@import "home/introducao.css";
+@import "home/tecnologia.css";
+@import "home/parceiros.css";
+@import "home/depoimento.css";
+
+/*Bicicletas*/
+@import "./bicicletas/bicicletas-listas.css";
+@import "./bicicletas/bicicletas.css";
+
+/*Bicicleta*/
+@import "./bicicleta/bicicleta.css";
+@import "./bicicleta/seguro.css";
+
+/*seguros*/
+@import url(seguros/seguros.css);
+@import url(seguros/perguntas.css);
+@import url(seguros/vantagens.css);
+
+/*Contato*/
+@import url(contato/contato.css);
+@import url(contato/lojas.css);
+
+/*Contato*/
+@import url(orcamento/orcamento.css);
+
+/*termos*/
+@import url(../termos/termos.css);
+
 body{
     margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+h1,
+ul{
+    margin: 0px;
 }
 
 ul{
@@ -11,6 +57,12 @@ ul{
 
 a{
     text-decoration: none;
+    color: inherit;
+}
+
+img{
+    max-width: 100%;
+    display: block;
 }
 
 .header-bg{
@@ -42,6 +94,8 @@ a{
     padding: 16px 0px;
     font-size: 18px;
     position: relative;
+    font-family: 'Poppins';
+    font-weight: 400;
 }
 
 .header-menu a:after{
@@ -89,3 +143,117 @@ a{
         font-size: 14px;
     }
  }
+
+ .introducao-bg{
+    background: #000000;
+    color: #ffffff;
+    box-shadow: inset 0 -120px #ffffff;
+ }
+
+ .introducao{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0px 40px;
+    box-sizing: border-box;
+    max-width: 1200px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
+ }
+
+ .introducao p,
+ .introducao a{
+    grid-column: 1;
+ }
+
+ .introducao img{
+    grid-column: 2;
+    grid-row: 1/3;
+ }
+
+.introducao-conteudo{
+    align-self: end;
+    padding-bottom: 200px;
+}
+
+.introducao-conteudo img{
+    object-fit: cover;
+    height: 100%;
+    border-radius: 4px;
+}
+
+.introducao h1{
+    margin-bottom: 32px;
+    font-size: 64px;
+    line-height: 1.125;
+    font-family: 'Poppins';
+    font-weight: 600;
+}
+
+.introducao h1 span{
+    color: #ffbb00;
+}
+
+.introducao p{
+    margin-bottom: 20px;
+    color: #b2b2b2;
+}
+
+.introducao a{
+    display: inline-block;
+    padding: 16px 32px;
+    background: linear-gradient(#ffbf00, #f2a50c);
+    border-radius: 4px;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+    text-transform: uppercase;
+    color: #332200;
+    font-size: 18px;
+    line-height: 1.33;
+    font-family: 'Poppins';
+    font-weight: 600;
+}
+
+.introducao a:hover{
+    background: linear-gradient(#ffb60d, #e59317);
+}
+
+@media (max-width: 600px){
+    .introducao a{
+        padding: 12px 16px;
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 1200px){
+    .introducao h1{
+        font-size: 48px;
+    }
+}
+
+@media (max-width: 800px){
+    .introducao-bg{
+        background: #111111;
+        padding-top: 40px;
+        box-shadow: inset 0 -60px #ffffff;
+    }
+
+    .introducao {
+        grid-template-columns: 1fr;
+        gap: 32px;
+    }
+    
+    .introducao-conteudo{
+        padding-bottom: 0px;
+    }
+    
+    .introducao h1{
+        font-size: 32px;
+        margin-bottom: 16px;
+    }
+
+    .introducao img{
+        height: 300px;
+        width: 100%;
+    }
+}
